Make SearchConnectors action exchange item specific. Remove the Node specific menu to simplify matters.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Mon Nov 21 18:27:44 CET 2022
+#Tue Nov 22 10:20:35 CET 2022
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
@@ -765,7 +765,9 @@ SearchInSocialIndicators=Search in social indicators
 SearchInSources=Search in sources
 SearchInUnitGroups=Search in unit groups
 SearchParameters=Search parameters
+SearchProviders=Search providers
 SearchProvidersFor=Search providers for
+SearchRecipients=Search recipients
 SearchRecipientsFor=Search recipients for
 SearchResults=Search results
 Searching=Searching...
