--- a/olca-app/src/org/openlca/app/messages_ca.properties
+++ b/olca-app/src/org/openlca/app/messages_ca.properties
@@ -1,4 +1,4 @@
-#Mon Nov 21 18:27:44 CET 2022
+#Tue Nov 22 10:20:35 CET 2022
 ALocationCodeIsRequired=Cal un codi d'assignaci\u00F3
 AccessAndUseRestrictions=Restriccions d'acc\u00E9s i d'\u00FAs
 ActivityQuantity=Propietat de l'activitat
@@ -599,7 +599,9 @@ SaveChangesQuestion=Vols guardar els canvis?
 SavingDiagramAsImageIn=Guardant diagrama com a imatge en {0}
 Search=Buscar
 SearchParameters=Buscar par\u00E0metres
+SearchProviders=Buscar prove\u00EFdors
 SearchProvidersFor=Buscar prove\u00EFdors per
+SearchRecipients=Buscar destinataris
 SearchRecipientsFor=Buscar destinataris per
 SearchResults=Buscar resultats
 Searching=Buscant...
