--- a/olca-app/src/org/openlca/app/messages_es.properties
+++ b/olca-app/src/org/openlca/app/messages_es.properties
@@ -1,4 +1,4 @@
-#Mon Nov 21 18:27:44 CET 2022
+#Tue Nov 22 10:20:35 CET 2022
 ALocationCodeIsRequired=Es necesario un c\u00F3digo de ubicaci\u00F3n
 AccessAndUseRestrictions=Restricciones de acceso y uso
 ActivityQuantity=Propiedad de la actividad
@@ -660,7 +660,9 @@ SearchInSocialIndicators=Buscar en indicadores sociales
 SearchInSources=Buscar en referencias
 SearchInUnitGroups=Buscar en grupos de unidades
 SearchParameters=Buscar par\u00E1metros
+SearchProviders=Buscar proveedores
 SearchProvidersFor=Buscar proveedores para
+SearchRecipients=Buscar destinatarios
 SearchRecipientsFor=Buscar destinatarios para
 SearchResults=Buscar resultados
 Searching=Buscando...
