--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -1,4 +1,4 @@
-#Mon Nov 21 18:27:44 CET 2022
+#Tue Nov 22 10:20:35 CET 2022
 ALocationCodeIsRequired=Un code emplacement est requis
 AccessAndUseRestrictions=Restrictions d'acc\u00E8s et d'utilisation
 ActivityQuantity=volume d'activit\u00E9
@@ -663,7 +663,9 @@ SearchInSocialIndicators=Chercher dans les indicateurs sociaux
 SearchInSources=Chercher dans les sources
 SearchInUnitGroups=Chercher dans les groupes d'unit\u00E9
 SearchParameters=Param\u00E8tres de recherche
+SearchProviders=Recherche de fournisseurs
 SearchProvidersFor=Recherche de fournisseurs pour
+SearchRecipients=Recherche de destinataires
 SearchRecipientsFor=Recherche de destinataires pour
 SearchResults=Rasultats de recherche
 Searching=Recherche...
