--- a/olca-app/src/org/openlca/app/messages_it.properties
+++ b/olca-app/src/org/openlca/app/messages_it.properties
@@ -1,4 +1,4 @@
-#Mon Nov 21 18:27:44 CET 2022
+#Tue Nov 22 10:20:35 CET 2022
 ALocationCodeIsRequired=Occorre indicare un codice di localit\u00E0
 AccessAndUseRestrictions=Restrizioni di accesso e uso
 ActivityQuantity=Attivit\u00E0 - Quantit\u00E0
@@ -316,7 +316,7 @@ ILCD_CONNECTION_WORKS_MSG="Connessione stabilita."
 ILCD_NO_READ_OR_WRITE_ACCESS_MSG=Non hai accesso in scrittua o lettura
 ILCD_NetworkImport=Importa dal Network
 ILCD_RunImport=Avvia importazione
-ILCD_SearchFailedMessage=Ricerca sul Network fallita\: 
+ILCD_SearchFailedMessage=Ricerca sul Network fallita\:
 ILCD_SearchPageDescription=Cerca e seleziona i processi da importare
 Id=Id
 ImageExport=Esporta come immagine
@@ -642,7 +642,9 @@ SearchInSocialIndicators=Cerca negli indicatori sociali
 SearchInSources=Cerca nelle fonti
 SearchInUnitGroups=Cerca nei gruppi di unit\u00E0
 SearchParameters=Ricerca parametri
+SearchProviders=Cerca i fornitori
 SearchProvidersFor=Cerca i fornitori di
+SearchRecipients=Cerca i fornitori
 SearchRecipientsFor=Cerca i destinatari di
 SearchResults=Risultati della ricerca
 Searching=Ricerca in corso...
