--- a/olca-app/src/org/openlca/app/messages_pt.properties
+++ b/olca-app/src/org/openlca/app/messages_pt.properties
@@ -1,4 +1,4 @@
-#Mon Nov 21 18:27:44 CET 2022
+#Tue Nov 22 10:20:35 CET 2022
 ALocationCodeIsRequired=C\u00F3digo da localiza\u00E7\u00E3o necess\u00E1rioUm err
 AccessAndUseRestrictions=Acesso e uso de restri\u00E7\u00F5es
 ActivityQuantity=Soma da atividade
@@ -130,9 +130,9 @@ CouldNotOverwriteFile=N\u00E3o foi poss\u00EDvel substituir o arquivo
 Country=Pa\u00EDs
 Coverage=Cobertura
 CreateANewDatabase=Criar nova base de dados
-CreateANewProductFlowForTheProcess=Criar um novo fluxo de produto para o processo 
+CreateANewProductFlowForTheProcess=Criar um novo fluxo de produto para o processo
 CreateDatabase=Criar base de dados
-CreateDefaultValuesForMissingFields=Criar novo fluxo de produto para o processo 
+CreateDefaultValuesForMissingFields=Criar novo fluxo de produto para o processo
 CreateNew=Criar novo
 CreateProcess=Criar processo
 CreateProcesslink=Criar um link para o processo
@@ -216,7 +216,7 @@ DoNotShowThisMessageAgain=N\u00E3o mostrar essa mensagem novamente
 DoYouReallyWantToDelete=Voc\u00EA realmente quer apagar {0}
 Dot=Ponto
 DownloadingData=Transferindo dados
-EcoSpold2Export=Exportar EcoSpold 2 
+EcoSpold2Export=Exportar EcoSpold 2
 EcoSpoldConfiguration=Configura\u00E7\u00E3o do\u00A0EcoSpold\u00A0
 Economic=Econ\u00F4mico
 Edit=Editar
@@ -292,7 +292,7 @@ Flows=Fluxos
 Folder=Pasta
 Formula=F\u00F3rmula
 FormulaEvaluationFailed=Avalia\u00E7\u00E3o da f\u00F3rmula falhou
-FormulaInterpreter=Interprete da f\u00F3rmula 
+FormulaInterpreter=Interprete da f\u00F3rmula
 FoundProblems=Problemas encontrados\:
 FromDirectory=A partir do diret\u00F3rio\:
 GeneralInformation=Informa\u00E7\u00F5es gerais
@@ -347,8 +347,8 @@ Import=Importar...
 ImportData=Importar dados
 ImportDatabase=Importar base de dados
 ImportEcoSpold=Importar EcoSpold
-ImportEcoSpold01DataSets=Importar datasets EcoSpold 01 
-ImportEcoSpold02DataSets=Importar datasets EcoSpold 02 
+ImportEcoSpold01DataSets=Importar datasets EcoSpold 01
+ImportEcoSpold02DataSets=Importar datasets EcoSpold 02
 ImportEcoSpoldGeographies=Importar Geografias\u00A0\u00A0EcoSpold 02\u00A0
 ImportILCD=Importar ILCD
 ImportKMLGeographies=Importar dados geogr\u00E1ficos em KML
@@ -634,7 +634,7 @@ RoundingMode=Modo de arredondamento
 Route=Rota
 RunCalculation=C\u00E1lculo de execu\u00E7\u00E3o
 SamplingProcedure=Procedimento de amostragem
-SankeyDiagram=Diagrama de Sankey 
+SankeyDiagram=Diagrama de Sankey
 Sankey_ScaleDescription=Escala de cores de processo (contribui\u00E7\u00F5es em [%])
 Save=Salvar
 SaveAs=Salvar como...
@@ -660,6 +660,7 @@ SearchInSources=Pesquisar em fontes
 SearchInUnitGroups=Pesquisar em unidade de grupos
 SearchParameters=Par\u00E2metros de pesquisa
 SearchProvidersFor=Pesquisar provedores
+SearchRecipients=Pesquisar destinat\u00E1rios
 SearchRecipientsFor=Pesquisar destinat\u00E1rios
 SearchResults=Procurar resultados
 Searching=Pesquisando...
@@ -677,7 +678,7 @@ SelectPrevious=Selecionar anterior
 SelectProviders=Selecionar fornecedor
 SelectRecipients=Selecione os destinat\u00E1rios
 SelectTheExportFile=Selecionar arquivo para importa\u00E7\u00E3o
-SelectTheParameterYouWantToReferTo=Selecione o par\u00E2metro que voc\u00EA quer referir 
+SelectTheParameterYouWantToReferTo=Selecione o par\u00E2metro que voc\u00EA quer referir
 SelectedParameterWasAlreadyAdded=O par\u00E2metro selecionado j\u00E1 foi adicionado neste m\u00E9todo AICV
 Semicolon=Ponto e v\u00EDrgula\u00A0
 ServerConfigurations=Salvar configura\u00E7\u00F5es
@@ -694,7 +695,7 @@ ShowInMap=Mostrar no mapa
 ShowOutline=Mostrar esbo\u00E7o
 ShowValues=Mostrar valores
 Showviews=Mostrar visualiza\u00E7\u00E3o
-SimaProCSVImport=Importar SimaPro CSV 
+SimaProCSVImport=Importar SimaPro CSV
 SingleScore=Pontua\u00E7\u00E3o individual
 SingleScoreBarChart=Pontua\u00E7\u00E3o individual\: gr\u00E1fico de barras\u00A0
 SingleScoreTable=Tabela de pontua\u00E7\u00E3o
