--- a/olca-app/src/org/openlca/app/messages_tr.properties
+++ b/olca-app/src/org/openlca/app/messages_tr.properties
@@ -1,4 +1,4 @@
-#Mon Nov 21 18:27:44 CET 2022
+#Tue Nov 22 10:20:35 CET 2022
 AccessAndUseRestrictions=Eri\u015Fim ve kullan\u0131m k\u0131s\u0131tlamalar\u0131
 ActivityQuantity=Faaliyet miktar\u0131
 ActivityUnit=Faaliyet birimi
@@ -555,7 +555,9 @@ SaveChanges=De\u011Fi\u015Fiklikleri kaydet
 SaveChangesQuestion=De\u011Fi\u015Fiklikleri kaydetmek istiyor musunuz?
 Search=Ara
 SearchParameters=Parametereleri ara
+SearchProviders=...y\u0131/yi temin edenleri
 SearchProvidersFor=...y\u0131/yi temin edenleri ara
+SearchRecipients=...n\u0131n/nin al\u0131c\u0131lar\u0131n\u0131
 SearchRecipientsFor=...n\u0131n/nin al\u0131c\u0131lar\u0131n\u0131 ara
 SearchResults=Arama sonu\u00E7lar\u0131
 Searching=Ar\u0131yor...
