Add ShowElementaryFlows action.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Tue Nov 22 10:20:35 CET 2022
+#Tue Nov 22 11:36:39 CET 2022
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
@@ -800,6 +800,7 @@ Settings=Settings
 SettingsForTheSankeyDiagram=Settings for the Sankey diagram
 Show=show
 ShowComments=Show comments
+ShowElementaryFlows=Show elementary flows
 ShowExecutedUpdates=Show executed updates
 ShowFormulas=Show formulas
 ShowInHistory=Show in history
@@ -862,6 +863,7 @@ TimeDescription=Time description
 Title=Title
 ToDirectory=To directory\:
 ToFile=To file\:
+ToggleShowElementaryFlows=Toggle show elementary flows
 TotalAddedValue=Total added value
 TotalNetcosts=Total net-costs
 TotalRequirements=Total requirements
