--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -1,4 +1,4 @@
-#Tue Nov 22 10:20:35 CET 2022
+#Tue Nov 22 11:36:39 CET 2022
 ALocationCodeIsRequired=Un code emplacement est requis
 AccessAndUseRestrictions=Restrictions d'acc\u00E8s et d'utilisation
 ActivityQuantity=volume d'activit\u00E9
@@ -694,6 +694,7 @@ SetSankeyDiagramOptions=D\u00E9finir les options de diagramme de Sankey
 Settings=Param\u00E8tres
 SettingsForTheSankeyDiagram=R\u00E9glages du diagramme de Sankey
 Show=afficher
+ShowElementaryFlows=Montrer les flux \u00E9l\u00E9mentaires
 ShowFormulas=Afficher les formules
 ShowInHistory=Montrer l'historique
 ShowInMap=Afficher sur la carte
@@ -747,6 +748,7 @@ TimeDescription=Description du temps
 Title=Titre
 ToDirectory=Vers le r\u00E9pertoire \:
 ToFile=Vers le fichier
+ToggleShowElementaryFlows=Activer l'affichage des flux \u00E9l\u00E9mentaires
 TotalAddedValue=Valeur ajout\u00E9e totale
 TotalNetcosts=Co\u00FBts nets totaux
 TotalRequirements=Besoins totaux
