Add Toogle EditModeAction in the graphical toolbar.

--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -1,4 +1,4 @@
-#Tue Nov 22 11:36:39 CET 2022
+#Wed Nov 23 09:58:34 CET 2022
 ALocationCodeIsRequired=Un code emplacement est requis
 AccessAndUseRestrictions=Restrictions d'acc\u00E8s et d'utilisation
 ActivityQuantity=volume d'activit\u00E9
@@ -223,6 +223,7 @@ EcoSpoldConfiguration=Configuration Ecopold
 Economic=Economique
 Edit=Modifier
 EditFlow=Modifier le flux
+EditMode=Mode \u00E9dition
 EditStickyNote=Modifier la note
 ElementaryFlow=Flux primaire
 Email=E-mail
@@ -748,6 +749,7 @@ TimeDescription=Description du temps
 Title=Titre
 ToDirectory=Vers le r\u00E9pertoire \:
 ToFile=Vers le fichier
+ToggleEditMode=Activer le mode \u00E9dition
 ToggleShowElementaryFlows=Activer l'affichage des flux \u00E9l\u00E9mentaires
 TotalAddedValue=Valeur ajout\u00E9e totale
 TotalNetcosts=Co\u00FBts nets totaux
