--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Tue Nov 22 11:36:39 CET 2022
+#Wed Nov 23 09:58:34 CET 2022
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
@@ -253,6 +253,7 @@ EcoSpoldConfiguration=EcoSpold Configuration
 Economic=Economic
 Edit=Edit
 EditFlow=Edit flow
+EditMode=Edit mode
 EditStickyNote=Edit sticky note
 ElementaryFlow=Elementary flow
 Email=Email
@@ -863,6 +864,7 @@ TimeDescription=Time description
 Title=Title
 ToDirectory=To directory\:
 ToFile=To file\:
+ToggleEditMode=Toggle edit mode
 ToggleShowElementaryFlows=Toggle show elementary flows
 TotalAddedValue=Total added value
 TotalNetcosts=Total net-costs
