Create a frame around the graphical editors (minimap and header).

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Wed Nov 23 09:58:34 CET 2022
+#Mon Nov 28 16:11:14 CET 2022
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
@@ -497,6 +497,7 @@ Merge=Merge
 Message=Message
 Methods=Methods
 MinimalTree=minimal tree
+Minimap=Minimap
 Minimize=Minimize
 MinimizeAll=Minimize all
 Minimum=Minimum
@@ -596,7 +597,6 @@ OpenFlow=Open flow
 OpenInEditor=Open in editor
 OpenLCALog=openLCA log
 OpenLogFile=Open log file
-OpenMiniatureView=Open miniature view
 OpenPluginManager=Opens the openLCA Plugin Manager
 OpenProvider=Open provider
 OpenUpdateManager=Open Update Manager
@@ -865,6 +865,7 @@ Title=Title
 ToDirectory=To directory\:
 ToFile=To file\:
 ToggleEditMode=Toggle edit mode
+ToggleMinimap=Toggle minimap
 ToggleShowElementaryFlows=Toggle show elementary flows
 TotalAddedValue=Total added value
 TotalNetcosts=Total net-costs
