--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -1,4 +1,4 @@
-#Wed Nov 23 09:58:34 CET 2022
+#Mon Nov 28 16:11:14 CET 2022
 ALocationCodeIsRequired=Un code emplacement est requis
 AccessAndUseRestrictions=Restrictions d'acc\u00E8s et d'utilisation
 ActivityQuantity=volume d'activit\u00E9
@@ -434,6 +434,7 @@ MemoryToLowMessage=La valeur entr\u00E9e doit \u00EAtre au moins de 256Mo.
 Message=Message
 Methods=M\u00E9thodes
 MinimalTree=arbre minimal
+Minimap=Mini-carte
 Minimize=R\u00E9duire
 MinimizeAll=Tout r\u00E9duire
 Minimum=Minimum
@@ -750,6 +751,7 @@ Title=Titre
 ToDirectory=Vers le r\u00E9pertoire \:
 ToFile=Vers le fichier
 ToggleEditMode=Activer le mode \u00E9dition
+ToggleMinimap=Activer la mini-carte
 ToggleShowElementaryFlows=Activer l'affichage des flux \u00E9l\u00E9mentaires
 TotalAddedValue=Valeur ajout\u00E9e totale
 TotalNetcosts=Co\u00FBts nets totaux
