Fix RemoveSupplyChain action.  - The action had to be selection sensitive (remove the supply chain of a Node or remove the supply chain of an exchange).  - The action should not remove processes that are providers for other processes (the action should delete the link and not the provider in that case).  - The action does not show up in the menu if the command is not executable.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Mon Nov 28 16:11:14 CET 2022
+#Mon Dec 05 15:52:04 CET 2022
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
@@ -703,6 +703,7 @@ Remote=Remote
 RemoteDatabase=Remote database
 Remove=Remove
 RemoveConnections=Remove connections
+RemoveFlowSupplyChain=Remove flow supply chain
 RemoveIndicator=Remove indicator
 RemoveObject=Remove object
 RemoveScore=Remove score
