--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -1,4 +1,4 @@
-#Mon Nov 28 16:11:14 CET 2022
+#Mon Dec 05 15:52:04 CET 2022
 ALocationCodeIsRequired=Un code emplacement est requis
 AccessAndUseRestrictions=Restrictions d'acc\u00E8s et d'utilisation
 ActivityQuantity=volume d'activit\u00E9
@@ -614,6 +614,7 @@ Remote=Distant
 RemoteDatabase=Base de donn\u00E9es distante
 Remove=Supprimer
 RemoveConnections=Supprimer les connexions
+RemoveFlowSupplyChain=Supprimer le circuit logistique du flux
 RemoveIndicator=Supprimer l'indicateur
 RemoveObject=Supprimer l'objet
 RemoveScore=Supprimer le score
