Fix Build actions (BuildNextTier and BuildSupplyChain):  - make the action selection sensible (ExchangeItem and Node),  - display the Nodes once the supply chain is built.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Mon Dec 05 15:52:04 CET 2022
+#Thu Dec 08 11:52:45 CET 2022
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
@@ -52,6 +52,7 @@ BaseUncertainty=Base uncertainty
 Both=Both
 Browse=Browse
 BrowseLocalFiles=Browse local files...
+BuildFlowSupplyChain=Build flow supply chain
 BuildNextTier=Build next tier
 BuildSupplyChain=Build supply chain
 Bulkreplace=Bulk-replace
@@ -78,6 +79,7 @@ CannotDeleteReferenceFlowProperty=Cannot delete reference flow property
 CannotDeleteReferenceUnit=Cannot delete reference unit
 CannotDeleteUnit=Cannot delete unit
 CannotRemoveExchanges=Cannot remove exchanges
+CannotRemoveSupplyChain=Cannot remove supply chain
 Category=Category
 CategoryNotEmpty=The category is not empty.
 Causal=Causal
@@ -660,6 +662,7 @@ Processes=Processes
 ProcessesWithoutProviders=Processes without providers
 ProducedBy=Produced by
 Product=Product
+ProductFlowSupplyReference=A product flow supplies the reference of the product system
 ProductSystem=Product system
 ProductSystemExcelExport=Product system Excel export
 ProductSystemExcelExportMessage=Please select a directory to export the product system to.
@@ -929,6 +932,7 @@ WaitingForServerToIndexDatasets=Waiting for server to index datasets
 Warning=Warning
 Warnings=Warnings
 Waste=Waste
+WasteFlowSupplyReference=A waste flow supplies the reference of the product system
 Website=Website
 WeightedArithmeticMean=Weighted arithmetic mean
 WeightedAverage=Weighted average
