--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -1,4 +1,4 @@
-#Mon Dec 05 15:52:04 CET 2022
+#Thu Dec 08 11:52:45 CET 2022
 ALocationCodeIsRequired=Un code emplacement est requis
 AccessAndUseRestrictions=Restrictions d'acc\u00E8s et d'utilisation
 ActivityQuantity=volume d'activit\u00E9
@@ -41,6 +41,7 @@ AvoidedWasteFlow=Flux de d\u00E9chets \u00E9vit\u00E9
 BackgroundData=donn\u00E9es de contexte
 BaseUncertainty=Incertitude de base
 Browse=Parcourir
+BuildFlowSupplyChain=Construction du circuit logistique du flux
 BuildNextTier=Construire le palier suivant
 BuildSupplyChain=Construction du circuit logistique
 Bulkreplace=Remplacement
@@ -67,6 +68,7 @@ CannotDeleteReferenceFlowProperty=impossible de supprimer la propri\u00E9t\u00E9
 CannotDeleteReferenceUnit=impossible de supprimer l'unit\u00E9 de r\u00E9f\u00E9rence
 CannotDeleteUnit=impossible de supprimer l'unit\u00E9
 CannotRemoveExchanges=impossible de retirer les \u00E9changes
+CannotRemoveSupplyChain=Impossible de retirer la cha\u00EEne d'approvisionnement
 Category=Cat\u00E9gorie
 CategoryNotEmpty=La cat\u00E9gorie n'est pas vide
 Causal=Causalit\u00E9
@@ -578,6 +580,7 @@ ProcessType=Type de proc\u00E9d\u00E9
 Processes=Proc\u00E9d\u00E9s
 ProducedBy=Produit par
 Product=Produit
+ProductFlowSupplyReference=La r\u00E9f\u00E9rence du syst\u00E8me de produits se trouve dans la cha\u00EEne d'approvisionnement du flux de produit
 ProductSystem=Syst\u00E8me de produit
 ProductSystemExcelExport=Export de syst\u00E8me de produit vers Excel
 ProductSystemExcelExportMessage=Veuillez s\u00E9lectionner un dossier o\u00F9 exporter le syst\u00E8me de produit.\nUn nouveau sous-dossier qui contiendra les fichiers d'export y sera cr\u00E9\u00E9.
@@ -806,7 +809,7 @@ VeryHighRisk=Risque tr\u00E8s fort
 VeryLowRisk=Risque tr\u00E8s faible
 Warning=Avertissement
 Warnings=Attention
-Waste=D\u00E9chet
+Waste=La r\u00E9f\u00E9rence du syst\u00E8me de produits se trouve dans la cha\u00EEne d'approvisionnement d'un flux de produit
 Website=Site Internet
 WeightedAverage=Moyenne pond\u00E9r\u00E9e
 WeightedSquaredAverage=Moyenne pond\u00E9r\u00E9e au carr\u00E9
