Save before deleting an Exchange.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Thu Dec 08 11:52:45 CET 2022
+#Tue Dec 20 14:36:53 CET 2022
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
@@ -280,6 +280,7 @@ Example=Example
 ExcelExport=Excel Export
 ExchangeDataQualitySchema=Exchange data quality schema
 ExchangesAreUsed=One or more of the selected exchanges are used already in a product system and therefore cannot be deleted.
+ExchangesAreUsedOrNotDisconnected=One or more of the selected exchanges are used already in a product system or are not fully disconnected in this product system and therefore cannot be deleted.
 ExcludeExchangesWithDefaultProviders=Exclude exchanges with default providers
 ExcludeZeroEntries=Exclude zero entries
 ExcludeZeroValues=Exclude zero values
