--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -1,4 +1,4 @@
-#Thu Dec 08 11:52:45 CET 2022
+#Tue Dec 20 14:36:53 CET 2022
 ALocationCodeIsRequired=Un code emplacement est requis
 AccessAndUseRestrictions=Restrictions d'acc\u00E8s et d'utilisation
 ActivityQuantity=volume d'activit\u00E9
@@ -245,6 +245,7 @@ Example=Exemple
 ExcelExport=Exporter au format Excel
 ExchangeDataQualitySchema=Echange du sch\u00E9ma de qualit\u00E9 des donn\u00E9es
 ExchangesAreUsed=Un ou plusieurs des \u00E9changes s\u00E9lectionn\u00E9s sont d\u00E9j\u00E0 utilis\u00E9s dans un syst\u00E8me de produits et par cons\u00E9quent ne peuvent pas \u00EAtre effac\u00E9s
+ExchangesAreUsedOrNotDisconnected=Un ou plusieurs des \u00E9changes s\u00E9lectionn\u00E9s sont d\u00E9j\u00E0 utilis\u00E9s dans un syst\u00E8me de produit ou ne sont pas totalement d\u00E9connect\u00E9s dans ce syst\u00E8me de produits et par cons\u00E9quent ne peuvent pas \u00EAtre effac\u00E9s
 ExcludeExchangesWithDefaultProviders=Exclure les \u00E9changes avec les fournisseurs par d\u00E9faut
 ExcludeZeroEntries=exclure z\u00E9ro entr\u00E9es
 ExcludeZeroValues=Exclure des valeurs nulles
