it should be normalization value in the user interface

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -576,7 +576,7 @@ NormalisationRadarChart=Normalisation - radar chart
 NormalisationResultTable=Normalisation result table
 Normalization=Normalization
 NormalizationAndWeightingSet=Normalization and weighting set
-NormalizationFactor=Normalization factor
+NormalizationValue=Normalization value
 NormalizationWeighting=Normalization and weighting
 NormalizationWeightingSets=Normalization and weighting sets
 North=North
