Fix deletion of Exchange in the model graph and in ProcessEditor.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -279,8 +279,8 @@ EvaluationSchema=Evaluation schema
 Example=Example
 ExcelExport=Excel Export
 ExchangeDataQualitySchema=Exchange data quality schema
-ExchangesAreUsed=One or more of the selected exchanges are used already in a product system and therefore cannot be deleted.
-ExchangesAreUsedOrNotDisconnected=One or more of the selected exchanges are used already in a product system or are not fully disconnected in this product system and therefore cannot be deleted.
+ExchangesAreUsed=One or more of the selected exchanges are already used in the product system and therefore cannot be deleted.
+ExchangesAreUsedOrNotDisconnected=One or more of the selected exchanges are already used in the product system or are not fully disconnected in this product system and therefore cannot be deleted.
 ExcludeExchangesWithDefaultProviders=Exclude exchanges with default providers
 ExcludeZeroEntries=Exclude zero entries
 ExcludeZeroValues=Exclude zero values
