Settings menu is now reach with Preferences instead.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Tue Dec 20 14:36:53 CET 2022
+#Tue Feb 28 09:55:55 CET 2023
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
@@ -644,6 +644,7 @@ Port=Port
 Position=Position
 Prefer=Prefer\: {0}
 PreferDefaultProviders=Prefer default providers
+Preferences=Preferences
 PreferredProcessType=Preferred process type
 Preparing=Preparing
 Price=Price
