--- a/olca-app/src/org/openlca/app/messages_ca.properties
+++ b/olca-app/src/org/openlca/app/messages_ca.properties
@@ -1,4 +1,4 @@
-#Tue Dec 20 14:36:53 CET 2022
+#Tue Feb 28 09:55:55 CET 2023
 ALocationCodeIsRequired=Cal un codi d'assignaci\u00F3
 AccessAndUseRestrictions=Restriccions d'acc\u00E9s i d'\u00FAs
 ActivityQuantity=Propietat de l'activitat
@@ -519,6 +519,7 @@ Point=Punt
 Polygon=Pol\u00EDgon
 Port=Port
 Prefer=Preferir\: {0}
+Preferences=Prefer\u00E8ncies
 Price=Preu
 Process=Proc\u00E9s
 ProcessContributionChart=Gr\u00E0fic de contribuci\u00F3 de proc\u00E9s
