--- a/olca-app/src/org/openlca/app/messages_es.properties
+++ b/olca-app/src/org/openlca/app/messages_es.properties
@@ -1,4 +1,4 @@
-#Tue Dec 20 14:36:53 CET 2022
+#Tue Feb 28 09:55:55 CET 2023
 ALocationCodeIsRequired=Es necesario un c\u00F3digo de ubicaci\u00F3n
 AccessAndUseRestrictions=Restricciones de acceso y uso
 ActivityQuantity=Propiedad de la actividad
@@ -556,6 +556,7 @@ Polygon=Pol\u00EDgono
 Port=Puerto
 Position=Posici\u00F3n
 Prefer=Preferible\: {0}
+Preferences=Preferencias
 Preparing=Preparando
 Price=Precio
 Process=Proceso
