--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -1,4 +1,4 @@
-#Tue Dec 20 14:36:53 CET 2022
+#Tue Feb 28 09:55:55 CET 2023
 ALocationCodeIsRequired=Un code emplacement est requis
 AccessAndUseRestrictions=Restrictions d'acc\u00E8s et d'utilisation
 ActivityQuantity=volume d'activit\u00E9
@@ -564,6 +564,7 @@ Polygon=Polygone
 Port=Port
 Position=Position
 Prefer=Pr\u00E9f\u00E9rez \: {0}
+Preferences=Pr\u00E9f\u00E9rences
 Preparing=Pr\u00E9paration
 Price=Prix
 Process=Proc\u00E9d\u00E9
