--- a/olca-app/src/org/openlca/app/messages_hu.properties
+++ b/olca-app/src/org/openlca/app/messages_hu.properties
@@ -1,4 +1,4 @@
-#Tue Dec 20 14:36:53 CET 2022
+#Tue Feb 28 09:55:55 CET 2023
 ALocationCodeIsRequired=Geok\u00F3d megad\u00E1sa k\u00F6telez\u0151
 AccessAndUseRestrictions=Hozz\u00E1f\u00E9r\u00E9si \u00E9s felhaszn\u00E1l\u00E1si megk\u00F6t\u00E9sek
 ActivityQuantity=Tev\u00E9kenys\u00E9g mennyis\u00E9g
@@ -556,6 +556,7 @@ Polygon=Soksz\u00F6g
 Port=Port
 Position=Helyzet
 Prefer=Lehet\u0151leg {0}
+Preferences=Preferenci\u00E1k
 Preparing=El\u0151k\u00E9sz\u00EDt\u00E9s
 Price=\u00C1r
 Process=R\u00E9szfolyamat
