--- a/olca-app/src/org/openlca/app/messages_it.properties
+++ b/olca-app/src/org/openlca/app/messages_it.properties
@@ -1,4 +1,4 @@
-#Tue Dec 20 14:36:53 CET 2022
+#Tue Feb 28 09:55:55 CET 2023
 ALocationCodeIsRequired=Occorre indicare un codice di localit\u00E0
 AccessAndUseRestrictions=Restrizioni di accesso e uso
 ActivityQuantity=Attivit\u00E0 - Quantit\u00E0
@@ -541,6 +541,7 @@ Polygon=Poligono
 Port=Porta
 Position=Posizione
 Prefer=Preferisci\: {0}
+Preferences=Preferenze
 Preparing=Preparazione
 Price=Prezzo
 Process=Processo
