--- a/olca-app/src/org/openlca/app/messages_pt.properties
+++ b/olca-app/src/org/openlca/app/messages_pt.properties
@@ -1,4 +1,4 @@
-#Tue Dec 20 14:36:53 CET 2022
+#Tue Feb 28 09:55:55 CET 2023
 ALocationCodeIsRequired=C\u00F3digo da localiza\u00E7\u00E3o necess\u00E1rioUm err
 AccessAndUseRestrictions=Acesso e uso de restri\u00E7\u00F5es
 ActivityQuantity=Soma da atividade
@@ -556,6 +556,7 @@ Polygon=Pol\u00EDgono
 Port=Porta
 Position=Posi\u00E7\u00E3o
 Prefer=Prefer\u00EAncia\: {0}
+Preferences=Prefer\u00EAncias
 Preparing=Preparando
 Price=Valor
 Process=Processos
