--- a/olca-app/src/org/openlca/app/messages_tr.properties
+++ b/olca-app/src/org/openlca/app/messages_tr.properties
@@ -1,4 +1,4 @@
-#Tue Dec 20 14:36:53 CET 2022
+#Tue Feb 28 09:55:55 CET 2023
 AccessAndUseRestrictions=Eri\u015Fim ve kullan\u0131m k\u0131s\u0131tlamalar\u0131
 ActivityQuantity=Faaliyet miktar\u0131
 ActivityUnit=Faaliyet birimi
@@ -481,6 +481,7 @@ PleaseSpecifyUser=L\u00FCtfen bir kullan\u0131c\u0131 belirleyin.
 Point=Nokta
 Polygon=Poligon
 Port=Ba\u011Flant\u0131 noktas\u0131
+Preferences=Tercihler
 Price=Fiyat
 Process=Proses
 ProcessContributionChart=Proses katk\u0131 grafi\u011Fi
