--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -1,4 +1,4 @@
-#Tue Dec 20 14:36:53 CET 2022
+#Tue Feb 28 09:55:55 CET 2023
 ALocationCodeIsRequired=Ein Ortscode wird ben\u00F6tigt
 AboutOpenLCA=\u00DCber openLCA
 AccessAndUseRestrictions=Zugangs- und Nutzungsbeschr\u00E4nkungen
@@ -560,6 +560,7 @@ Polygon=Polygon
 Port=Port
 Position=Position
 Prefer=Bevorzuge\: {0}
+Preferences=Vorlieben
 Preparing=Wird vorbereitet
 Price=Preis
 Process=Prozess
