--- a/olca-app/src/org/openlca/app/messages_zh.properties
+++ b/olca-app/src/org/openlca/app/messages_zh.properties
@@ -1,4 +1,4 @@
-#Tue Dec 20 14:36:53 CET 2022
+#Tue Feb 28 09:55:55 CET 2023
 ALocationCodeIsRequired=\u4F4D\u7F6E\u7DE8\u78BC\u70BA\u5FC5\u586B
 AccessAndUseRestrictions=\u5B58\u53D6\u548C\u9650\u5236
 ActivityQuantity=\u6D3B\u52D5\u6578\u64DA\u54C1\u8CEA
@@ -556,6 +556,7 @@ Polygon=\u591A\u908A\u578B
 Port=\u901A\u8A0A\u57E0
 Position=\u4F4D\u7F6E
 Prefer=\u504F\u597D\: {0}
+Preferences=\u4F18\u5148
 Preparing=\u6E96\u5099\u4E2D
 Price=\u50F9\u683C
 Process=\u5DE5\u5E8F
