Make theme selection into the Preferences.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 09:55:55 CET 2023
+#Tue Feb 28 11:52:19 CET 2023
 ALocationCodeIsRequired=A location code is required
 AboutOpenLCA=About openLCA
 AccessAndUseRestrictions=Access and use restrictions
@@ -863,6 +863,7 @@ TexchnologyMatrix=Technology matrix
 Text=Text
 TextDropComponent_ToolTipText=Drag a selected object from the navigation view into the text field or click to open a dialog.
 TextReference=Text reference
+Theme=Theme
 ThisWillCompressTheDatabase=This will compress the database and free up unsused space. For bigger databases this might take a while.
 Time=Time
 TimeAndAuthor=Time and author
