--- a/olca-app/src/org/openlca/app/messages_ca.properties
+++ b/olca-app/src/org/openlca/app/messages_ca.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 09:55:55 CET 2023
+#Tue Feb 28 11:52:19 CET 2023
 ALocationCodeIsRequired=Cal un codi d'assignaci\u00F3
 AccessAndUseRestrictions=Restriccions d'acc\u00E9s i d'\u00FAs
 ActivityQuantity=Propietat de l'activitat
@@ -669,6 +669,7 @@ TexchnologyMatrix=Matriu tecnol\u00F2gica
 Text=Text
 TextDropComponent_ToolTipText=Arrastra un objecte seleccionat des del men\u00FA de navegaci\u00F3 al camp de text o clica per obrir un quadre de di\u00E0leg.
 TextReference=Refer\u00E8ncia de text
+Theme=Tema
 Time=Temps
 TimeAndAuthor=Hora i autor/a
 TimeDescription=Descripci\u00F3 temporal
