--- a/olca-app/src/org/openlca/app/messages_es.properties
+++ b/olca-app/src/org/openlca/app/messages_es.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 09:55:55 CET 2023
+#Tue Feb 28 11:52:19 CET 2023
 ALocationCodeIsRequired=Es necesario un c\u00F3digo de ubicaci\u00F3n
 AccessAndUseRestrictions=Restricciones de acceso y uso
 ActivityQuantity=Propiedad de la actividad
@@ -738,6 +738,7 @@ TexchnologyMatrix=Matriz tecnol\u00F3gica
 Text=Texto
 TextDropComponent_ToolTipText=Arrastre un objeto seleccionado desde el men\u00FA de navegaci\u00F3n al campo de texto o pulse para abrir un cuadro de di\u00E1logo.
 TextReference=Referencia de texto
+Theme=Tema
 Time=Tiempo
 TimeAndAuthor=Hora y autor
 TimeDescription=Descripci\u00F3n temporal
