--- a/olca-app/src/org/openlca/app/messages_fr.properties
+++ b/olca-app/src/org/openlca/app/messages_fr.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 09:55:55 CET 2023
+#Tue Feb 28 11:52:19 CET 2023
 ALocationCodeIsRequired=Un code emplacement est requis
 AccessAndUseRestrictions=Restrictions d'acc\u00E8s et d'utilisation
 ActivityQuantity=volume d'activit\u00E9
@@ -750,6 +750,7 @@ TexchnologyMatrix=Matrice de technologie
 Text=Texte
 TextDropComponent_ToolTipText=Fa\u00EEtes glisser un objet choisi\nde la vuende navigation vers le\nchamp texte ou cliquez pour ouvrir\nune bo\u00EEte de dialogue.
 TextReference=R\u00E9f\u00E9rence texte
+Theme=Th\u00E8me
 Time=Temps
 TimeAndAuthor=Date et auteur
 TimeDescription=Description du temps
