--- a/olca-app/src/org/openlca/app/messages_hu.properties
+++ b/olca-app/src/org/openlca/app/messages_hu.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 09:55:55 CET 2023
+#Tue Feb 28 11:52:19 CET 2023
 ALocationCodeIsRequired=Geok\u00F3d megad\u00E1sa k\u00F6telez\u0151
 AccessAndUseRestrictions=Hozz\u00E1f\u00E9r\u00E9si \u00E9s felhaszn\u00E1l\u00E1si megk\u00F6t\u00E9sek
 ActivityQuantity=Tev\u00E9kenys\u00E9g mennyis\u00E9g
@@ -736,6 +736,7 @@ TexchnologyMatrix=Technol\u00F3gia-m\u00E1trix
 Text=Sz\u00F6veg
 TextDropComponent_ToolTipText=H\u00FAzza a kiv\u00E1lasztot elemet a navig\u00E1ci\u00F3s n\u00E9zetb\u0151l a sz\u00F6vegmez\u0151be vagy kattintson egy p\u00E1rbesz\u00E9dablak megnyit\u00E1s\u00E1hoz.
 TextReference=Sz\u00F6veges hivatkoz\u00E1s
+Theme=T\u00E9ma
 Time=Id\u0151
 TimeAndAuthor=D\u00E1tum \u00E9s szerz\u0151
 TimeDescription=Id\u0151beli le\u00EDr\u00E1s
