--- a/olca-app/src/org/openlca/app/messages_it.properties
+++ b/olca-app/src/org/openlca/app/messages_it.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 09:55:55 CET 2023
+#Tue Feb 28 11:52:19 CET 2023
 ALocationCodeIsRequired=Occorre indicare un codice di localit\u00E0
 AccessAndUseRestrictions=Restrizioni di accesso e uso
 ActivityQuantity=Attivit\u00E0 - Quantit\u00E0
@@ -716,6 +716,7 @@ TexchnologyMatrix=Matrice tecnologica
 Text=Testo
 TextDropComponent_ToolTipText=Trascina un oggetto selezionato dalla \nvista di navigazione al campo di testo \no clicca per aprire una \nfinestra di dialogo.
 TextReference=Testo di riferimento
+Theme=Tema
 Time=Data
 TimeAndAuthor=Data e autore
 TimeDescription=Descrizione temporale
