--- a/olca-app/src/org/openlca/app/messages_pt.properties
+++ b/olca-app/src/org/openlca/app/messages_pt.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 09:55:55 CET 2023
+#Tue Feb 28 11:52:19 CET 2023
 ALocationCodeIsRequired=C\u00F3digo da localiza\u00E7\u00E3o necess\u00E1rioUm err
 AccessAndUseRestrictions=Acesso e uso de restri\u00E7\u00F5es
 ActivityQuantity=Soma da atividade
@@ -736,6 +736,7 @@ TexchnologyMatrix=Matriz da tecnologia
 Text=Texto
 TextDropComponent_ToolTipText=Arraste um objeto selecionado a partir do navegador no campo de texto ou clique para abrir um \u00A0di\u00E1logo.
 TextReference=Texto de refer\u00EAncia
+Theme=Tema
 Time=Tempo
 TimeAndAuthor=Tempo e autor
 TimeDescription=Descri\u00E7\u00E3o do tempo
