--- a/olca-app/src/org/openlca/app/messages_tr.properties
+++ b/olca-app/src/org/openlca/app/messages_tr.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 09:55:55 CET 2023
+#Tue Feb 28 11:52:19 CET 2023
 AccessAndUseRestrictions=Eri\u015Fim ve kullan\u0131m k\u0131s\u0131tlamalar\u0131
 ActivityQuantity=Faaliyet miktar\u0131
 ActivityUnit=Faaliyet birimi
@@ -621,6 +621,7 @@ TestDistribution=Deneme da\u011F\u0131l\u0131m\u0131
 TexchnologyMatrix=Teknoloji matrisi
 Text=Metin
 TextReference=Metin referans\u0131
+Theme=Tema
 Time=Zaman
 TimeAndAuthor=Zaman ve yazar
 TimeDescription=Zaman tan\u0131m\u0131
