--- a/olca-app/src/org/openlca/app/messages_de.properties
+++ b/olca-app/src/org/openlca/app/messages_de.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 09:55:55 CET 2023
+#Tue Feb 28 11:52:19 CET 2023
 ALocationCodeIsRequired=Ein Ortscode wird ben\u00F6tigt
 AboutOpenLCA=\u00DCber openLCA
 AccessAndUseRestrictions=Zugangs- und Nutzungsbeschr\u00E4nkungen
@@ -746,6 +746,7 @@ TexchnologyMatrix=Technologie-Matrix
 Text=Text
 TextDropComponent_ToolTipText=Ein ausgew\u00E4hltes Objekt von der Navigation in das Textfeld ziehen, oder Klicken um einen Dialog zu \u00F6ffnen.
 TextReference=Textreferenz
+Theme=Thema
 Time=Zeit
 TimeAndAuthor=Zeit und Autor
 TimeDescription=Zeitbeschreibung
