--- a/olca-app/src/org/openlca/app/messages_zh.properties
+++ b/olca-app/src/org/openlca/app/messages_zh.properties
@@ -1,4 +1,4 @@
-#Tue Feb 28 09:55:55 CET 2023
+#Tue Feb 28 11:52:19 CET 2023
 ALocationCodeIsRequired=\u4F4D\u7F6E\u7DE8\u78BC\u70BA\u5FC5\u586B
 AccessAndUseRestrictions=\u5B58\u53D6\u548C\u9650\u5236
 ActivityQuantity=\u6D3B\u52D5\u6578\u64DA\u54C1\u8CEA
@@ -736,6 +736,7 @@ TexchnologyMatrix=\u6280\u8853\u77E9\u9663
 Text=\u6587\u5B57
 TextDropComponent_ToolTipText=\u5F9E\u5C0E\u89BD\u62D6\u52D5\u9078\u64C7\u7684\u7269\u4EF6\u5230\u6587\u5B57\u6B04\u4F4D\u6216\u9EDE\u64CA\u53BB\u958B\u555F\u5C0D\u8A71\u6846
 TextReference=\u6587\u5B57\u53C3\u8003
+Theme=\u4E3B\u9898
 Time=\u6642\u9593
 TimeAndAuthor=\u6642\u9593\u548C\u4F5C\u8005
 TimeDescription=\u6642\u9593\u5167\u5BB9
