Use apostrophe symbole instead of back-tick/accent when quoting.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -840,7 +840,7 @@ StandardDeviation=Standard deviation
 StandardDeviationFormula=Standard deviation (formula)
 Start=Start
 StartDate=Start date
-StartIPCInfo=Click on the `run` button to start the IPC server.
+StartIPCInfo=Click on the "run" button to start the IPC server.
 StartIPCServer=Start an IPC Server
 Statistics=Statistics
 StopIPCInfo=The IPC server is running. Click on the `stop` button or close this dialog to stop it.
