--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -804,7 +804,7 @@ SetAsReferenceCurrency=Set as reference currency?
 SetReferenceCurrencyQuestion=Do you want to set this currency as the reference currency of the database?
 SetSankeyDiagramOptions=Set sankey diagram options
 Settings=Settings
-SettingsForTheSankeyDiagram=Settings for the Sankey diagram
+SettingsOfTheSankeyDiagram=Settings of the Sankey diagram
 Show=show
 ShowComments=Show comments
 ShowElementaryFlows=Show elementary flows
