Fixed issues with comment pages

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -102,7 +102,7 @@ CollapseAll=Collapse all
 ColumnSeparator=Column separator
 Comma=Comma
 Comment=Comment
-Comments=Comments\:
+Comments=Comments
 Commit=Commit
 CommitAndPush=Commit and Push
 CommitChangesToRepository=Commit changes to repository
