--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -788,7 +788,7 @@ SelectDataSets=Select data sets
 SelectImportFiles=Select import files
 SelectLanguageNoteMessage=Changes will not take affect until openLCA is restarted
 SelectNext=Select next
-SelectObjectPage_Description=Please specify an output directory and select the {0} you want to export
+SelectObjectPage_Description=Please select the destination and the data sets for the export
 SelectPrevious=Select previous
 SelectProviders=Select providers
 SelectRecipients=Select recipients
