Create a MultiPageEditor for the libraries for general information and license information.

--- a/olca-app/src/org/openlca/app/messages.properties
+++ b/olca-app/src/org/openlca/app/messages.properties
@@ -217,6 +217,8 @@ DatabaseType=Database type
 DatabaseValidationCompleteNoErrorsWereFound=Database validation complete. No errors were found.
 DatabaseVersionCheckFailed=Could not get the version from the database. Is this an openLCA database?
 DatabaseWasExportedToFile=Database was exported to file
+DaysAgo=day(s) ago
+DaysFromNow=day(s) from now
 DecimalSeparator=Decimal separator
 DefaultFlowProperty=Default flow property
 DefaultMethod=Default method
@@ -287,6 +289,8 @@ ExcludeZeroValues=Exclude zero values
 Exit=Exit
 Expand=expand
 ExpandAll=Expand all
+Expired=Expired
+ExpiryDate=Expiry date
 Export=Export...
 ExportAsMatrix=Export as matrix
 ExportDataSets=Export data sets
@@ -465,6 +469,8 @@ LayoutAs=Layout as {0}
 LciaCategoryDescriptionTable=LCIA category description table
 LciaResultTable=LCIA result table
 LibgfortanInfo=openLCA uses a native library for improved calculation performance. It requires the package libgfortran3 to be installed on Linux which seems to be not the case on your system. We recommend to install this package if you want to use the improved calculation features of openLCA. If you are running an Ubuntu system try installing the package with 'apt-get install libgfortran3'
+Library=Library
+LicenseInformation=License information
 Line=Line
 LinkingProperties=Linking properties
 LoadingRepositoryList=Loading repository list
@@ -558,6 +564,7 @@ NoDatabaseOpened=No database is opened
 NoDescription=No description
 NoDistribution=No distribution
 NoExportFilesSelected=No export files selected
+NoLicenseDetected=No license detected
 NoOpportunity=No opportunity
 NoParameterSelected=No parameter selected
 NoProjectVaraintsAreDefined=No project variants are defined
@@ -603,6 +610,7 @@ OpenLogFile=Open log file
 OpenPluginManager=Opens the openLCA Plugin Manager
 OpenProvider=Open provider
 OpenUpdateManager=Open Update Manager
+Organisation=Organisation
 Other=Other
 OutOfMemory=Out of memory
 Output=Output
@@ -612,6 +620,7 @@ OverwriteFile=Overwrite file
 OverwriteFileQuestion=The selected file already exists. Do you want to overwrite it?
 OverwriteLocalChanges=Overwrite local changes
 OverwriteRemoteChanges=Overwrite remote changes
+Owner=Owner
 Parameter=Parameter
 ParameterAlreadyAdded=Parameter already added
 ParameterDescriptionTable=Parameter description table
@@ -843,6 +852,7 @@ StartDate=Start date
 StartIPCInfo=Click on the "run" button to start the IPC server.
 StartIPCServer=Start an IPC Server
 Statistics=Statistics
+Status=Status
 StopIPCInfo=The IPC server is running. Click on the `stop` button or close this dialog to stop it.
 StoreInventoryResult=Store inventory result
 SubCategory=Sub-category
@@ -920,12 +930,14 @@ UseBrowserFeatures=Use browser features
 UseMaximumScoreForZeroValues=Use maximum score for zero values
 UsedInProcesses=Used in processes
 User=User
+Valid=Valid
 Validate=Validate
 ValidatingDatabase=Validating database
 Value=Value
 Variant=Option
 VariantDescriptionTable=Product system description table
 Variants=Compared product systems
+Vendor=Vendor
 Verifier=Verifier
 Version=Version
 VersionNewer=Version newer
